{
    "name": "PlayerInputs",
    "maps": [
        {
            "name": "PlayerMovement",
            "id": "8dc7ddc2-b897-4a48-ada1-34fdd7974502",
            "actions": [
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "d99fe890-f200-4f8a-87b1-4ed2bc5aac0c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "c53e6e84-36fb-494c-a824-8e11f4a2f75a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "AD",
                    "id": "4667f49c-bc0d-4673-b614-dd83832abe0b",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "897d73c2-4d23-443e-8890-4eb689f614c8",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "fb56d866-291c-49e0-a17c-38b723a1d35b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "64f1666a-9f49-4453-acbc-d6cfc0b4a516",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "ItemComparing",
            "id": "3fe5ff35-4811-42b0-9118-deddb0fadd66",
            "actions": [
                {
                    "name": "CancelCompare",
                    "type": "Button",
                    "id": "8846b728-d7c3-4e51-93ff-eb46143bfc5d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "AcceptCompare",
                    "type": "Button",
                    "id": "4ec00bcf-734b-4a87-9f49-cfbad29bb8c8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "NextBarSlot",
                    "type": "Button",
                    "id": "b8e00e63-2083-4f4b-9f6a-d57fe89d5d38",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PreviousBarSlot",
                    "type": "Button",
                    "id": "f41caeeb-a176-47eb-9f98-14c9cf7cc676",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "BarSlot_1",
                    "type": "Button",
                    "id": "3fbc3ae6-cf81-4ae5-a125-127d61cf020b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "BarSlot_2",
                    "type": "Button",
                    "id": "e251583d-2e8b-4c9f-9933-acdfe9cd2b1e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "BarSlot_3",
                    "type": "Button",
                    "id": "c53739c8-e8f7-4950-b181-ce4d71e6d69a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "BarSlot_4",
                    "type": "Button",
                    "id": "cb8cafc3-1572-4fd2-bd97-116b4d0348bb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "BarSlot_5",
                    "type": "Button",
                    "id": "c674ca15-9b39-4a15-a826-2baf50f53c87",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ChangeDisplaySides",
                    "type": "Button",
                    "id": "4d6a0852-90ec-48df-a893-f3708494bc3f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "97bda366-04a9-4012-b634-19c95969ee9b",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CancelCompare",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d5d5092d-99eb-403a-958f-0e847a9d0f74",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CancelCompare",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "49cb8081-b9a6-48b7-93c8-48002b85c07f",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AcceptCompare",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6b8272cb-4f2a-49da-9ba1-71310fcb8848",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextBarSlot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ee1c9a5c-43a3-4234-9192-417ea1097d07",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextBarSlot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "964699dc-56cc-4cbb-a1cf-76e51293f8d2",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PreviousBarSlot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7a70a058-d06f-468c-9e61-1835aa688a55",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PreviousBarSlot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ed61cbe0-7e06-42ac-acbc-466c95eaa85a",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BarSlot_1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2c27f27a-ed3a-4ef7-9175-8914aa5b7963",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BarSlot_2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "12423122-5f15-49b7-8c58-23c697c0234f",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BarSlot_3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a937c64d-2a3c-41e3-a4b6-bca97a473462",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BarSlot_4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3c9945be-6076-4906-962a-61081ec9a8d9",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BarSlot_5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a41ea271-e5d8-4349-8162-9850609a844b",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeDisplaySides",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Toolbar",
            "id": "18d3cfd3-ddf3-438d-af53-2710f6302e58",
            "actions": [
                {
                    "name": "Slot_1",
                    "type": "Button",
                    "id": "259ca402-5ab9-480a-b305-05578299aac6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Slot_2",
                    "type": "Button",
                    "id": "422107ee-f2c3-474e-bdb8-bc92008788f1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Slot_3",
                    "type": "Button",
                    "id": "446a9900-d4eb-421e-8dd7-72828bd72584",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Slot_4",
                    "type": "Button",
                    "id": "ee329858-2092-45db-9b98-ab03e5b2a427",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Slot_5",
                    "type": "Button",
                    "id": "959891ae-ec21-4ce8-a7c4-0a527fbe969c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Slot_6",
                    "type": "Button",
                    "id": "bc032320-1d08-415a-bb38-74ae30ea91c9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Slot_7",
                    "type": "Button",
                    "id": "87af4344-e326-48be-bf56-14fed27afeca",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Slot_8",
                    "type": "Button",
                    "id": "8d3ef280-aebd-48cc-9bf2-b4f65a704930",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Slot_9",
                    "type": "Button",
                    "id": "5eee50c8-d8e8-465b-acde-0c1af600eff9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Slot_10",
                    "type": "Button",
                    "id": "0d35daf3-086a-41d7-878c-795a6f814696",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4a75757f-8fde-437c-8851-4e6e64f66edf",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slot_1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1cafc4f1-9c2a-43ad-95e6-524d7177d876",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slot_2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "80e69efd-4a70-4078-a272-ab4bc3fc8270",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slot_3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "32fed740-6b44-47a4-ae2f-cc47aaa8763c",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slot_4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "164dedc0-7f33-4554-97ed-27e9576b9a05",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slot_5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e371b665-c1b7-4bc4-ab6c-34d000473b7b",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slot_6",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cc8bc3f3-1974-4654-9941-8b1743ac1247",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slot_7",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a303c964-c91e-4e0f-8a2d-4a6eed211219",
                    "path": "<Keyboard>/8",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slot_8",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "57ddf66d-e409-4cf3-806b-f5180ccd571c",
                    "path": "<Keyboard>/9",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slot_9",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ed994def-3214-4faa-bc9c-515c195f1ddf",
                    "path": "<Keyboard>/0",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slot_10",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "EquipedItem",
            "id": "a0ca9462-4057-47c6-a6c6-626bf1ab36a2",
            "actions": [
                {
                    "name": "MainUse",
                    "type": "Button",
                    "id": "9773ca68-4283-4b11-86ae-2e5f13bb2182",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SecondaryUse",
                    "type": "Button",
                    "id": "5fcd9e2e-9d6e-47b5-9348-8573552fd050",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Reload",
                    "type": "Button",
                    "id": "5cfa6d33-56df-4f72-93c6-a709c4c6c406",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "527ce2fc-0641-4265-9e60-0b89aaf561a3",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MainUse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ef729e0e-d681-435b-a5b7-ae47491d097a",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryUse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "98446875-1dbd-427c-9565-c30e594c50a4",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerActions",
            "id": "6f71687a-24af-421e-a09f-f87f44004917",
            "actions": [
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "8649d515-e3ed-4965-b3de-ec4dc70a8fca",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ToggleInventory",
                    "type": "Button",
                    "id": "775cb416-9239-42df-bd4b-ecabfed397a4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DeactivateInventory",
                    "type": "Button",
                    "id": "adca54cb-31d3-424c-a3c8-8f7c397effb3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2f3fbce0-54e0-4d17-9694-6fcd4716263b",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "09c60eb2-de8d-4f8e-986c-aff5932a9838",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5b6e89ec-a072-4849-959e-fd4e900e6514",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "264e4f93-8343-419d-9bc1-46f31ade1948",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DeactivateInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "GameControl",
            "id": "565ef034-653a-472b-b173-796a1ad6726b",
            "actions": [
                {
                    "name": "ReloadGame",
                    "type": "Button",
                    "id": "9555beaf-9703-49d2-9de2-fd6e381f58a6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "NextPhrase",
                    "type": "Button",
                    "id": "4898aceb-24bf-4519-92a8-4cd622b3dcb7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f253225c-10bd-4a90-9d5e-786bcfb98837",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ReloadGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d7715a1b-c2a7-4b64-9e00-1c01366306fc",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextPhrase",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}